# pdm-templates

./: .pre-commit-config.yaml  README.md
default/: README.md  pyproject.toml
default/sandbox/: __main__.py
default/sandbox/setup/: __init__.py  logging_config.toml
default/scripts/: example.py
default/scripts/setup/: __init__.py
default/src/my_package/: my_module.py
minimal/: pyproject.toml
notebook/: README.md  pyproject.toml
plugin/: README.md  pyproject.toml
plugin/src/my_package/: __init__.py  commands.py
