[project]
name = "my-package"

[tool.pdm.scripts]
post_init = {cmd = [
    "pdm", "add",
    "--frozen-lockfile",
    "--no-sync",
    "--dev",
    "--group", "notebook",
    "ipykernel", "ipympl"
    ]}

kernel = {cmd = [
    "py", "-m", "ipykernel", "install",
    "--name", "notebook_project",
    "--display-name", "notebook_project",
    "--user"
    ]}
